--- a/AuctionAce.Api/Views/Home/Index.cshtml
+++ b/AuctionAce.Api/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
         <p class="lead">Bid now, grab deals, win unique auctions, and don’t miss out on the best offers!</p>
 
         <button id="scrollToAuctions" class="btn btn-light btn-lg">Check out the latest active auctions</button>
-        <button id="scrollToItems" class="btn btn-light btn-lg">Check out sold items</button>
+        @* <button id="scrollToItems" class="btn btn-light btn-lg">Check out sold items</button> *@
     </div>
 </div>
 
