--- a/AuctionAce.Api/Views/Auction/AllAuctions.cshtml
+++ b/AuctionAce.Api/Views/Auction/AllAuctions.cshtml
@@ -30,7 +30,7 @@
         {
             foreach (var item in Model.AuctionStatus)
             {
-                <div class="col-md-3 mb-4 card-wrapper"  data-startdate="@item.StartDate.ToString("o")" data-status="@item.Status" data-enddate="@item.EndDate.ToString("o")">
+                <div class="col-md-3 mb-4 card-wrapper" data-startdate="@item.StartDate.ToString("o")" data-status="@item.Status" data-enddate="@item.EndDate.ToString("o")">
                     <div class="card position-relative custom-card-width">
                         @if (item.AllAuctionsPhotos != null && item.AllAuctionsPhotos.AuctionImages != null && item.AllAuctionsPhotos.AuctionImages.Count > 0)
                         {
@@ -42,9 +42,10 @@
                             <img class="card-img-top" src="path/to/default/image.png" alt="No image available">
                         }
                         <div class="card-body">
-                            @if(item.AuctionName.Length >27){
+                            @if (item.AuctionName.Length > 27)
+                            {
 
-                                <h5 class="card-title">@item.AuctionName.Substring(0,24)...</h5>
+                                <h5 class="card-title">@item.AuctionName.Substring(0, 24)...</h5>
 
                             }
                             else
@@ -52,19 +53,19 @@
                                 <h5 class="card-title">@item.AuctionName</h5>
                             }
 
-                            @if(item.Description.Length >48)
+                            @if (item.Description.Length > 48)
                             {
                                 <p class="card-text">@item.Description.Substring(0, 45)...</p>
                             }
                             else
                             {
-                               <p class="card-text">@item.Description</p>
+                                <p class="card-text">@item.Description</p>
                             }
                             <p class="card-time" id="timer-@item.Id"></p>
                             <a href="@Url.Action("AuctionItemList", "Auction", new { auctionId = item.Id })" class="btn btn-primary">View Auction Details</a>
                         </div>
                         <div class="like-container">
-                            <span class="like-icon" data-auction-id="@item.Id">&#9829;</span> <!-- Serduszko -->
+                            <span class="like-icon" data-auction-id="@item.Id" onclick="heartClick()">&#9829;</span> <!-- Serduszko -->
                         </div>
                         <div class="status-bubble">
                             @* Status will be added dynamically *@
@@ -282,7 +283,7 @@
             }
         });
 
-            const connection = new signalR.HubConnectionBuilder()
+        const connection = new signalR.HubConnectionBuilder()
             .withUrl("/hub")
             .build();
 
@@ -336,23 +337,21 @@
                     statusBubble.className = 'status-bubble status-open';
                     statusBubble.textContent = 'Active';
 
-                    
+
                     if (auctionId) {
-                        connection.invoke("SetActiveItemsInAuction", parseInt(auctionId,10))
+                        connection.invoke("SetActiveItemsInAuction", parseInt(auctionId, 10))
                             .catch(err => console.error("Error to set active items: ", err.toString()));
                     }
 
-                }else{
+                } else {
                     cardWrapper.setAttribute('data-status', 'Inactive');
                     statusBubble.className = 'status-bubble status-closed';
                     connection.invoke("SetInactiveItemsInAuctionWithoutBids", parseInt(auctionId, 10))
-                        .catch(err => console.error("Error to set inactive items: ", err.toString())); 
+                        .catch(err => console.error("Error to set inactive items: ", err.toString()));
                     statusBubble.textContent = 'Inactive'; // Dodanie komunikatu "Auction Ended"
                 }
             });
         }
-
-
 
 
         setInterval(updateTimer, 1000);
