--- a/AuctionAce.Api/Views/Auction/AddAuction.cshtml
+++ b/AuctionAce.Api/Views/Auction/AddAuction.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using AuctionAce.Api.Models.ViewModels.Auctions
+@model AuctionViewModel
+@{
     Layout = "~/Views/Shared/_LayoutLogged.cshtml";
     string url = Url.Action("AllAuctionsById");
 }
@@ -8,6 +10,16 @@
         <div class="form-group">
             <label for="auctionName">Auction Name</label>
             <input type="text" class="form-control" id="auctionName" name="auctionName" required>
+        </div>
+        <div class="form-group">
+            <label for="auctionCategory">Category</label>
+            <select class="form-control" id="auctionCategory">
+                <option value="" disabled selected>Select a category</option>
+                @foreach (var category in Model.CategoriesDomains)
+                {
+                    <option value="@category.Id">@category.Name</option>
+                }
+            </select>
         </div>
         <div class="form-group">
             <label for="description">Description</label>
@@ -84,12 +96,8 @@
                         <textarea class="form-control" id="itemDescription" name="Description" rows="3"></textarea>
                     </div>
                     <div class="form-group">
-                        <label for="itemCategory">Category</label>
-                        <input type="text" class="form-control" id="itemCategory" name="Category">
-                    </div>
-                    <div class="form-group">
-                        <label for="itemImage" id="fileNameLabel" class="btn btn-primary btn-block btn-outlined">Item Photo</label>
-                        <input type="file" id="itemImage" accept="image/*" style="display: none" multiple>
+                        <label for="itemImage" id="fileNameLabel" class="btn btn-primary btn-block btn-outlined" required>Item Photo</label>
+                        <input type="file" id="itemImage" accept="image/*" style="display: none" multiple required>
                     </div>
                     <div class="form-group">
                         <label for="startPrice">Start Price</label>
