--- a/AuctionAce.Api/Views/Shared/_LayoutUnlogged.cshtml
+++ b/AuctionAce.Api/Views/Shared/_LayoutUnlogged.cshtml
@@ -50,11 +50,11 @@
                     </a>
                     <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
 
-                        <li class="nav-item">
+                        @* <li class="nav-item">
                             <a href="@Url.Action("AllAuctions","Auction")" class="nav-link align-middle px-0">
                                 <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Auctions</span>
                             </a>
-                        </li>
+                        </li> *@
                         <li>
                             <a href="#" class="nav-link px-0 align-middle">
                                 <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline">Login</span>
@@ -143,14 +143,16 @@
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Select User Type</label>
-                            <div class="radio-container">
-                                <div class="form-check form-check-inline w-50">
-                                    <input class="form-check-input" type="radio" name="userRole" id="roleUser" value="1" checked>
-                                    <label class="radio-label" for="roleUser">User</label>
+
+                            <div class="d-flex justify-content-between">
+                                <div class="btn-group w-50" role="group" aria-label="User type selection">
+                                    <input type="radio" class="btn-check" name="userRole" id="roleUser" value="1" checked>
+                                    <label class="btn btn-outline-primary w-100" for="roleUser">User</label>
                                 </div>
-                                <div class="form-check form-check-inline w-50">
-                                    <input class="form-check-input" type="radio" name="userRole" id="roleAuctioneer" value="2">
-                                    <label class="radio-label" for="roleAuctioneer">Auctioner</label>
+
+                                <div class="btn-group w-50" role="group" aria-label="User type selection">
+                                    <input type="radio" class="btn-check" name="userRole" id="roleAuctioneer" value="2">
+                                    <label class="btn btn-outline-primary w-100" for="roleAuctioneer">Auctioner</label>
                                 </div>
                             </div>
                         </div>
