category and frontend update

--- a/AuctionAce.Api/Views/Auction/AddAuction.cshtml
+++ b/AuctionAce.Api/Views/Auction/AddAuction.cshtml
@@ -9,7 +9,7 @@
     <form id="auctionForm">
         <div class="form-group">
             <label for="auctionName">Auction Name</label>
-            <input type="text" class="form-control" id="auctionName" name="auctionName" required>
+            <input type="text" class="form-control" id="auctionName" name="auctionName" required maxlength="200">
         </div>
         <div class="form-group">
             <label for="auctionCategory" required>Category</label>
