--- a/AuctionAce.Api/Views/Auction/AuctionItemList.cshtml
+++ b/AuctionAce.Api/Views/Auction/AuctionItemList.cshtml
@@ -12,7 +12,12 @@
         Layout = "~/Views/Shared/_LayoutUnlogged.cshtml";
     }
 }
-<div class="container mt-5">
+<h1>Auction Name: <h5>@Model.AuctionName</h5></h1>
+<h1>Auction Description: <h5>@Model.AuctionDescription</h5></h1>
+
+
+
+<div class="container-fluid mt-5">
     @if (Model.AuctionItems != null)
     {
         <div class="auction-container">
@@ -38,19 +43,19 @@
                             <td>@i.BuyNowPrice</td>
                             <td>@(i.NewUsed==true ? "New" : "Used")</td>
                             <td>
-                                <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#carouselModal-@i.Id" data-item-id="@i.Id">
+                                <button type="button" class="btn btn-info btn-sm w-100 h-100 " data-toggle="modal" data-target="#carouselModal-@i.Id" data-item-id="@i.Id">
                                     <i class="fas fa-images"></i>
                                 </button>
                             </td>
                             <td>
                                 @if (userId != 0)
                                 {
-                                    <a href="@Url.Action("Index", "AuctionItem", new { itemId = i.Id,itemGuid =i.Guid})" class="btn btn-primary @(i.IdStatus == 0 ? "disabled" : "")" @(i.IdStatus == 0 ? "tabindex='-1' aria-disabled='true'" : "")>@(i.IdStatus == 0 ? "Closed" : "Join")</a>
+                                    <a href="@Url.Action("Index", "AuctionItem", new { itemId = i.Id,itemGuid =i.Guid})" class="btn btn-primary w-100 h-100 @(i.IdStatus == 0 ? "disabled" : "")" @(i.IdStatus == 0 ? "tabindex='-1' aria-disabled='true'" : "")>@(i.IdStatus == 0 ? "Closed" : "Join")</a>
                                 }
                                 else
                                 {
 
-                                 <span class="btn btn-secondary" tabindex="-1" aria-disabled="true">Login Required</span>
+                                    <span class="btn btn-secondary w-100 h-100" tabindex="-1" aria-disabled="true">Login Required</span>
                                 }
 
                             </td>
@@ -104,3 +109,15 @@
         <p>No auctions available.</p>
     }
 </div>
+
+<style>
+    table {
+        table-layout: fixed;
+        width: 100%;
+    }
+
+    td {
+        word-wrap: break-word;
+        white-space: normal;
+    }
+</style>
