--- a/AuctionAce.Api/Views/Auction/AuctionItemList.cshtml
+++ b/AuctionAce.Api/Views/Auction/AuctionItemList.cshtml
@@ -41,23 +41,21 @@
                             <td>@i.Description</td>
                             <td>@i.StartingPrice</td>
                             <td>@i.BuyNowPrice</td>
-                            <td>@(i.NewUsed==true ? "New" : "Used")</td>
+                            <td>@(i.NewUsed == true ? "New" : "Used")</td>
                             <td>
-                                <button type="button" class="btn btn-info btn-sm w-100 h-100 " data-toggle="modal" data-target="#carouselModal-@i.Id" data-item-id="@i.Id">
+                                <button type="button" class="btn btn-info btn-sm w-100 h-100" data-toggle="modal" data-target="#carouselModal-@i.Id" data-item-id="@i.Id">
                                     <i class="fas fa-images"></i>
                                 </button>
                             </td>
                             <td>
                                 @if (userId != 0)
                                 {
-                                    <a href="@Url.Action("Index", "AuctionItem", new { itemId = i.Id,itemGuid =i.Guid})" class="btn btn-primary w-100 h-100 @(i.IdStatus == 0 ? "disabled" : "")" @(i.IdStatus == 0 ? "tabindex='-1' aria-disabled='true'" : "")>@(i.IdStatus == 0 ? "Closed" : "Join")</a>
+                                    <a href="@Url.Action("Index", "AuctionItem", new { itemId = i.Id, itemGuid = i.Guid })" class="btn btn-primary w-100 h-100 @(i.IdStatus == 0 ? "disabled" : "")" @(i.IdStatus == 0 ? "tabindex='-1' aria-disabled='true'" : "")>@(i.IdStatus == 0 ? "Closed" : "Join")</a>
                                 }
                                 else
                                 {
-
                                     <span class="btn btn-secondary w-100 h-100" tabindex="-1" aria-disabled="true">Login Required</span>
                                 }
-
                             </td>
                         </tr>
 
@@ -111,6 +109,7 @@
 </div>
 
 <style>
+    <style >
     table {
         table-layout: fixed;
         width: 100%;
@@ -119,5 +118,15 @@
     td {
         word-wrap: break-word;
         white-space: normal;
+        height: 50px; /* Set a fixed height for the cells */
     }
+
+    .table td {
+        padding: 0;
+    }
+
+    .btn {
+        height: 100%; /* Make the button fill the height of the cell */
+    }
+</style>
 </style>
