--- a/AuctionAce.Api/Views/Shared/_LayoutLogged.cshtml
+++ b/AuctionAce.Api/Views/Shared/_LayoutLogged.cshtml
@@ -23,6 +23,7 @@
     <script src="~/js/Login.js"></script>
     <script src="~/js/signalr/dist/browser/signalr.js"></script>
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js'></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cdbootstrap/css/bootstrap.min.css" />
