--- a/AuctionAce.Api/Views/UserBoughtItems/Index.cshtml
+++ b/AuctionAce.Api/Views/UserBoughtItems/Index.cshtml
@@ -5,10 +5,10 @@
     int counter = 1;
 }
 
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-12">
-            <table class="table table-image">
+            <table class="table table-bordered table-hover">
                 <thead>
                     <tr>
                         <th scope="col"></th>
@@ -54,7 +54,7 @@
                                     </div>
                                 }
                             </td>
-                            <td>@item.Description</td>
+                            <td class="description-cell">@item.Description</td>
                             <td>@item.NewUsed</td>
                         </tr>
                         counter++;
@@ -66,6 +66,15 @@
 </div>
 
 <style>
+
+
+    .description-cell {
+    max-width: 200px; /* Ustal maksymalną szerokość kolumny */
+    word-wrap: break-word; /* Zawijaj tekst, gdy przekracza szerokość komórki */
+    white-space: normal; /* Pozwól, aby tekst rozciągał się na kolejne linie */
+    overflow: hidden; /* Ukryj nadmiar, gdy jest za długi */
+    }
+
     .container {
         padding: 2rem 0rem;
     }
